<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.outingcard.OutingMainFragment">

    <TextView
        android:id="@+id/outing_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/outing_tv"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/outing_detail_tv"
        app:layout_constraintStart_toStartOf="@+id/outing_gl_left"
        app:layout_constraintTop_toTopOf="@+id/outing_gl_top" />

    <TextView
        android:id="@+id/outing_detail_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/outing_detail_tv"
        android:textColor="@color/colorPurple"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/outing_gl_right"
        app:layout_constraintStart_toStartOf="@+id/outing_gl_left"
        app:layout_constraintTop_toBottomOf="@id/outing_tv" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/outing_gl_bottom"
        app:layout_constraintEnd_toStartOf="@+id/outing_gl_right"
        app:layout_constraintStart_toStartOf="@+id/outing_gl_left"
        app:layout_constraintTop_toTopOf="@+id/outing_gl_middle">

        <androidx.cardview.widget.CardView
            android:id="@+id/outing_apply_card"
            android:layout_width="0dp"
            android:layout_height="88dp"
            android:layout_margin="6dp"
            app:cardBackgroundColor="@color/colorGray"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp"
            app:layout_constraintBottom_toTopOf="@id/outing_history_card"
            app:layout_constraintEnd_toStartOf="@+id/outing_gl_right2"
            app:layout_constraintStart_toStartOf="@id/outing_gl_left2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/outing_apply_view"
                    android:layout_width="2dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="14dp"
                    android:background="@color/colorPurple"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/outing_apply_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/outing_apply_tv"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/outing_apply_view"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/outing_apply_detail_tv"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/outing_apply_tv" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/outing_history_card"
            android:layout_width="0dp"
            android:layout_height="88dp"
            android:layout_margin="6dp"
            app:cardBackgroundColor="@color/colorGray"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp"
            app:layout_constraintBottom_toTopOf="@id/outing_complete_card"
            app:layout_constraintEnd_toStartOf="@id/outing_gl_right2"
            app:layout_constraintStart_toStartOf="@id/outing_gl_left2"
            app:layout_constraintTop_toBottomOf="@id/outing_apply_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/outing_history_view"
                    android:layout_width="2dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="14dp"
                    android:background="@color/colorPurple"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/outing_history_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/outing_history_tv"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/outing_history_view"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/outing_history_detail_tv"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/outing_history_tv" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/outing_complete_card"
            android:layout_width="0dp"
            android:layout_height="88dp"
            android:layout_margin="6dp"
            app:cardBackgroundColor="@color/colorGray"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp"
            app:layout_constraintBottom_toTopOf="@id/outing_notice_card"
            app:layout_constraintEnd_toStartOf="@id/outing_gl_right2"
            app:layout_constraintStart_toStartOf="@id/outing_gl_left2"
            app:layout_constraintTop_toBottomOf="@id/outing_history_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/outing_complete_view"
                    android:layout_width="2dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="14dp"
                    android:background="@color/colorPurple"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/outing_complete_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/outing_complete_tv"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/outing_complete_view"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/outing_complete_detail_tv"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/outing_complete_tv" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/outing_notice_card"
            android:layout_width="0dp"
            android:layout_height="88dp"
            android:layout_margin="6dp"
            app:cardBackgroundColor="@color/colorGray"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/outing_gl_right2"
            app:layout_constraintStart_toStartOf="@id/outing_gl_left2"
            app:layout_constraintTop_toBottomOf="@id/outing_complete_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/outing_notice_view"
                    android:layout_width="2dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="14dp"
                    android:background="@color/colorPurple"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/outing_notice_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/outing_notice_tv"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/outing_notice_view"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="167dp"
                    android:layout_height="19dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/outing_notice_detail_tv"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/outing_notice_tv" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/outing_gl_left2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/outing_gl_right2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/outing_gl_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/outing_gl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/outing_gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/outing_gl_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/outing_gl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

</androidx.constraintlayout.widget.ConstraintLayout>